added support for multiple paths, removed a exit, fixed for loop that picks a random song

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [alarm]
-query = alarm
-mp3_path = C:/projects/temp/,/var/lib/mopidy/local
 calendar = alarm
+query = alarm
+mp3_paths = C:/projects/temp/,/var/lib/mopidy/local
 
 [pep8]
 ignore = E226,E302,E41
