--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [alarm]
 calendar = alarm
 query = alarm
-mp3_paths = /var/lib/mopidy/local, C:/projects/temp
+mp3_paths =/var/lib/mopidy/local/,C:/projects/temp/
 
 [pep8]
 ignore = E226,E302,E41
